fixed some bugs: frameDescription.width

--- a/rebuild-twitter/home.html
+++ b/rebuild-twitter/home.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <script type="text/javascript" src="js/jquery.min.js"></script>
-    <title>Benjamin Shi (@aiifabbf) | Twitter</title>
+    <title>Twitter</title>
     <style>
     body {
         font-family: Arial;
