--- a/rebuild-twitter2/index.html
+++ b/rebuild-twitter2/index.html
@@ -233,7 +233,7 @@
     }
 
     #frameDescription {
-        width: 100%;
+        width: 400px;
     }
 
     #frameDescription a {
@@ -399,18 +399,18 @@
     {
         "dir": "img/US_CA_6.jpg",
         "tweet": "Sums up this holiday.",
-        "author": "Benjamin Shi",
-        "time": "12:06 Tuesday"
+        "author": "Tweet and photo by @sanarao",
+        "time": "07:05 PM - 9 Nov 2014"
     },
     {
         "dir": "img/US_CA_4.jpg",
-        "tweet": "Sums up this holiday.",
-        "author": "Benjamin Shi",
+        "tweet": "National moment of silence happening now. #Ferguson #JusticeForMikeBrown",
+        "author": "Tweet and photo by @Thursday_Neal",
         "time": "12:06 Tuesday"
     },
     {
         "dir": "img/US_CA_7.jpg",
-        "tweet": ".@ChicagoBulls outlast @Warriors in a dramatic finish,113-111. D-Rose overcomes TOs, nails game-winning jumper.",
+        "tweet": "@ChicagoBulls outlast @Warriors in a dramatic finish,113-111. D-Rose overcomes TOs, nails game-winning jumper.",
         "author": "Tweet and photo by @NBA",
         "time": "11:13 PM - 27 Jan 2015"
     },
