stage 2: homepage 90% completed.

--- a/rebuild-twitter2/index.html
+++ b/rebuild-twitter2/index.html
@@ -31,6 +31,7 @@
     /* unified arguments start */
     * {
         box-sizing: border-box;
+        font-family: Arial, sans-serif;
     }
 
     a {
@@ -203,6 +204,7 @@
         width: 267px;
         right: 0;
         background-color: white;
+        border-radius: 4px;
         padding: 10px 0;
         box-shadow: 0 1px 4px rgba(0,0,0,0.25);
     }
@@ -398,7 +400,7 @@
     var tree = [
     {
         "dir": "img/US_CA_6.jpg",
-        "tweet": "Sums up this holiday.",
+        "tweet": "Sums up this weekend.",
         "author": "Tweet and photo by @sanarao",
         "time": "07:05 PM - 9 Nov 2014"
     },
