--- a/rebuild-twitter2/user.html
+++ b/rebuild-twitter2/user.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <script src="js/jquery.min.js"></script>
-    <title>欢迎来到 Twitter - 登录或注册</title>
+    <title>{{ userData["name"] }} - Twitter</title>
     <style>
     /*
     1.位置属性(position, top, right, z-index, display, float等)
