initialise unique studio task

--- a/rebuild-twitter/user.html
+++ b/rebuild-twitter/user.html
@@ -69,13 +69,13 @@
 
     a.button {
         text-decoration: none;
-        border-bottom: solid 4px transparent;
-        transition: border-bottom 0.2s, color 0.2s;
+        transition: all 0.15s;
         padding: 0px 9px;
     }
 
     a.button:hover {
         border-bottom: solid 4px #0084B4;
+        height: 46px;
         color: #0084B4;
     }
 
