--- a/rebuild-twitter2/index.html
+++ b/rebuild-twitter2/index.html
@@ -7,14 +7,6 @@
     <script src="js/jquery.min.js"></script>
     <title>欢迎来到 Twitter - 登录或注册</title>
     <style>
-    /*
-    1.位置属性(position, top, right, z-index, display, float等)
-    2.大小(width, height, padding, margin)
-    3.文字系列(font, line-height, letter-spacing, color- text-align等)
-    4.背景(background, border等)
-    5.其他(animation, transition等)
-    */
-
     /* layout rules 
     Including the following ONLY:
     [max-|min-]width
@@ -63,7 +55,11 @@
         margin-left: auto;
         margin-right: auto;
     }
-
+    .container::after{
+        content:'';
+        clear:both;
+        display: block;
+    }
     .frame {
         margin-left: auto;
         margin-right: auto;
